# personalized-fashion-recommender-system

./: README.md  main.py  pyproject.toml
core/: config.py  constants.py  dependencies.py
core/features/: articles.py  customers.py  embedding.py  interactions.py  rankings.py  transactions.py
core/services/hopsworks/: feature_store.py  requirements.txt
core/services/hopsworks/inference/: llm_ranking_predictor.py  query_transformer.py  ranking_predictor.py  ranking_transformer.py
core/services/hopsworks/serving/: llm_ranking_serving.py  ranking_serving.py  two_tower_serving.py
core/services/hopsworks/training/: ranking.py  two_tower.py
core/ui/: feature_group_updater.py  interaction_tracker.py  recommenders.py  utils.py
data/: loader.py
