[project]
name = "personalized-fashion-recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "black>=25.12.0",
    "fastapi[standard]>=0.115.6",
    "hopsworks[python]>=3.0.5",
    "isort>=7.0.0",
    "joblib>=1.5.3",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
